@@ -217,16 +217,16 @@ public class NcCrac {
             if (HeaderType.START_END_DATE.equals(headerType)) {
                 if (NcCracUtils.checkProfileKeyword(propertyBag, NcKeyword.STEADY_STATE_INSTRUCTION) && NcCracUtils.checkProfileValidityInterval(propertyBag, importTimestamp)) {
                     String id = propertyBag.getId(queryObjectName);
-                    String overridedValue = propertyBag.get(queryFieldName);
-                    dataMap.put(id, overridedValue);
+                    String overriddenValue = propertyBag.get(queryFieldName);
+                    dataMap.put(id, overriddenValue);
                 }
             } else {
                 if (NcCracUtils.checkProfileKeyword(propertyBag, NcKeyword.STEADY_STATE_HYPOTHESIS)) {
                     OffsetDateTime scenarioTime = OffsetDateTime.parse(propertyBag.get(NcConstants.SCENARIO_TIME));
                     if (importTimestamp.isEqual(scenarioTime)) {
                         String id = propertyBag.getId(queryObjectName);
-                        String overridedValue = propertyBag.get(queryFieldName);
-                        dataMap.put(id, overridedValue);
+                        String overriddenValue = propertyBag.get(queryFieldName);
+                        dataMap.put(id, overriddenValue);
                     }
                 }
             }
@@ -267,30 +267,20 @@ public class NcCrac {
         return multiContextsPropertyBags;
     }
 
-    public void setForTimestamp(OffsetDateTime offsetDateTime) {
-        clearTimewiseIrrelevantContexts(offsetDateTime);
+    public void setForTimestampAndCheckHeaders(OffsetDateTime offsetDateTime) {
+        clearIrrelevantContexts(offsetDateTime);
         setOverridingData(offsetDateTime);
     }
 
-    private void clearTimewiseIrrelevantContexts(OffsetDateTime offsetDateTime) {
+    private void clearIrrelevantContexts(OffsetDateTime offsetDateTime) {
         getHeaders().forEach((contextName, properties) -> {
             if (!properties.isEmpty()) {
-                PropertyBag property = properties.get(0);
-                if (!checkTimeCoherence(property, offsetDateTime)) {
-                    OpenRaoLoggerProvider.BUSINESS_WARNS.warn(String.format(
-                        "[REMOVED] The file : %s will be ignored. Its dates are not consistent with the import date : %s",
-                        contextName, offsetDateTime
-                    ));
+                PropertyBag property = properties.getFirst();
+                if (!HeaderChecker.checkHeader(property, contextName, offsetDateTime)) {
                     clearContext(contextName);
                     clearKeywordMap(contextName);
                 }
             }
         });
-    }
-
-    private static boolean checkTimeCoherence(PropertyBag header, OffsetDateTime offsetDateTime) {
-        String startTime = header.getId(NcConstants.REQUEST_HEADER_START_DATE);
-        String endTime = header.getId(NcConstants.REQUEST_HEADER_END_DATE);
-        return NcCracUtils.isValidInterval(offsetDateTime, startTime, endTime);
     }
 }
